BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/CRM_AssociazioneProdottiCampagna__c.object-meta.xml
<CustomObject>
    <label>Prodotto associato alla campagna</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome prodotto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prodotti associati alla campagna</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>