BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/fields/CRM_Campagna__c.field-meta.xml
<CustomField>
    <fullName>CRM_Campagna__c</fullName>
    <label>Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Prodotti associati alla campagna</relationshipLabel>
    <relationshipName>Prodotti_associati_alla_campagna</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>