BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/fields/CRM_D_ELABORAZIONE_EXT__c.field-meta.xml
<CustomField>
    <fullName>CRM_D_ELABORAZIONE_EXT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data estrazione del record</label>
    <type>DateTime</type>
</CustomField>