BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/fields/CRM_D_RIF_EXT__c.field-meta.xml
<CustomField>
    <fullName>CRM_D_RIF_EXT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Data Riferimento</label>
    <type>Date</type>
</CustomField>