BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/fields/CRM_DescrizioneProdotto__c.field-meta.xml
<CustomField>
    <fullName>CRM_DescrizioneProdotto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Descrizione prodotto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>