BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/fields/CRM_K_EXT__c.field-meta.xml
<CustomField>
    <fullName>CRM_K_EXT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Chiave Esterna</label>
    <length>50</length>
    <type>Text</type>
</CustomField>