BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/fields/CRM_LivelloProdotto__c.field-meta.xml
<CustomField>
    <fullName>CRM_LivelloProdotto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Livello prodotto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>