BPER/DEVF/force-app/main/default/objects/CRM_AssociazioneProdottiCampagna__c/fields/CRM_Prodotto__c.field-meta.xml
<CustomField>
    <fullName>CRM_Prodotto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prodotto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Prodotti associati alla campagna</relationshipLabel>
    <relationshipName>CampagneLegateAlProdotto</relationshipName>
    <type>Lookup</type>
</CustomField>